# Space-Shooter

./: .gitignore  Bullet.cpp  Bullet.h  BulletManager.cpp  CMakeLists.txt  Collision.cpp  LICENSE  README.md  TextureManager.h  Util.cpp  Util.h  main.cpp  run.sh
linux64_binary/: Space_Shooter
src/: Bar.cpp  Bullet.cpp  BulletManager.cpp  BulletManager.h  Button.cpp  Collision.cpp  Collision.h  Enemy.cpp  EnemyManager.cpp  Game.cpp  Score.cpp  Ship.cpp  Ship.h  TextureManager.cpp  Timer.cpp  Util.cpp  Util.h  main.cpp
src/Animation/: AnimationManager.cpp  Animator.cpp
src/Animation/include/: AnimationManager.h  Animator.h  Explosion.h
src/Audio/: Audio.cpp  AudioManager.cpp
src/Audio/include/: Audio.h  AudioManager.h
src/GameStates/: GameOverState.cpp  MainMenu.cpp  PauseState.cpp  StateManager.cpp
src/GameStates/include/: GameOverState.h  MainMenu.h  PauseState.h  StateManager.h
src/include/: Bar.h  Bullet.h  BulletManager.h  Button.h  Collision.h  DEFINES.h  Enemy.h  EnemyManager.h  Game.h  Score.h  Ship.h  TextureManager.h  Timer.h  Util.h
